<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="add_a_neighbour">Add a new neighbour</string>
    <string name="tabs_content_description">Two tab: My neighbours and Favorites</string>
    <string name="content_description_avatar_neighbour">Avatar neighbour</string>
    <string name="detail_about_me">A propos de moi</string>
    <string name="favorite">Add neighbour in favorite list</string>
</resources>
